# RAG-pipeline-postmortems

./: .gitignore  RAG-assigment.md  README.md  __init__.py  config.py  convert_jira_to_markdown.py  generation.py  get_docs_chunk.py  ingestion.py  postmortems.json  pyproject.toml  requirements.txt  retrieval.py  show_chunks_detail.py  utils.py
evals/: __init__.py  groundedness.py  precision.py  recall.py
excalidrawn/: RAG-pipeline-diagram.excalidraw  evals-prompts-diagram.excalidraw  evals-tradeoffs-diagram.excalidraw  why-metadata-filtered-diagram.excalidraw
scripts/: convert_jira_to_markdown.py  get_docs_chunk.py  show_chunks_detail.py
